live-initrd-sidux (0.0.15) UNRELEASED; urgency=low

  * NOT RELEASED YET

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 29 Dec 2006 23:55:25 +0100

live-initrd-sidux (0.0.14) unstable; urgency=low

  [ Joaquim Boura ]
  * load loop and squashfs modules.

  [ Kel Modderman ]
  * Print kernel version to stdout.

 -- Kel Modderman <kel@otaku42.de>  Sat, 30 Dec 2006 08:45:34 +1000

live-initrd-sidux (0.0.13) unstable; urgency=low

  * new unionfs cheat by slh now usable

 -- Niall Walsh <niallwalsh@users.berlios.de>  Tue, 19 Dec 2006 11:58:28 +0000

live-initrd-sidux (0.0.12) unstable; urgency=low

  * removed extra / before FLL_MOUNTPOINT

 -- Joaquim Boura <x-un-i@sidux.com>  Sun, 17 Dec 2006 01:06:54 +0100

live-initrd-sidux (0.0.11) unstable; urgency=low

  * fromiso was not working, fixed var name for the image.

 -- Joaquim Boura <x-un-i@sidux.com>  Sun, 17 Dec 2006 00:05:43 +0100

live-initrd-sidux (0.0.10) unstable; urgency=low

  [ Stefan Lippers-Hollmann ]
  * don't chmod sudoers, it can act as busybox test.

  [ Joaquim Boura ]
  * cheat code toram was failing. protect the var FLL_MEDIUM on some places

 -- Joaquim Boura <x-un-i@sidux.com>  Sat, 16 Dec 2006 09:49:45 +0100

live-initrd-sidux (0.0.9) unstable; urgency=low

  * fix /var/, /home/ usage.
  * depend on busybox-sidux >= 1.2.2.1-2.
  * show architecture in welcome message.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 11 Dec 2006 14:43:53 +0100

live-initrd-sidux (0.0.8) unstable; urgency=low

  * use bind mounts for /home/ and /var/.
  * fix ld-linux-x86-64.so.2 vs ld-linux.so.2 usage.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 11 Dec 2006 14:26:42 +0100

live-initrd-sidux (0.0.7) unstable; urgency=low

  * ensure correct permissions for /etc/sudoers, thanks to bfree.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 10 Dec 2006 19:56:38 +0100

live-initrd-sidux (0.0.6) unstable; urgency=low

  [ Stefan Lippers-Hollmann ]
  * add myself to uploaders.

  [ Niall Walsh ]