@@ -11,8 +11,9 @@ live-initrd-sidux (0.0.14) unstable; urgency=low
 
   [ Kel Modderman ]
   * Print kernel version to stdout.
+  * Quick hack to ensure linuxrc is never symlinked to busybox.
 
- -- Kel Modderman <kel@otaku42.de>  Sat, 30 Dec 2006 08:45:34 +1000
+ -- Kel Modderman <kel@otaku42.de>  Sat, 30 Dec 2006 08:57:32 +1000
 
 live-initrd-sidux (0.0.13) unstable; urgency=low
 
